deployments/kubernetes/0-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: demo
  name: demo
spec:
  finalizers:
  - kubernetes
