deployments/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: local.ecosia.org
    http:
      paths:
      - path: /tree
        backend:
          serviceName: app
          servicePort: 5000
